Criando objetos corretamente