@@ -1,5 +1,7 @@
 package br.com.alura.alurator;
 
+import java.lang.reflect.InvocationTargetException;
+
 public class Alurator {
 
 	private String pacoteBase;
@@ -21,15 +23,18 @@ public class Alurator {
 		try {
 			Class<?> classeControle = Class.forName(pacoteBase + nomeController);
 
-			@SuppressWarnings("deprecation")
-			Object instanciaControle = classeControle.newInstance();
+			Object instanciaControle = classeControle.getDeclaredConstructor().newInstance();
 			
 			System.out.println(instanciaControle);
 
 			return null;
-		} catch (ClassNotFoundException | InstantiationException | IllegalAccessException e) {
+		} catch (ClassNotFoundException | InstantiationException | IllegalAccessException | IllegalArgumentException 
+				| NoSuchMethodException | SecurityException e) {
 			e.printStackTrace();
 			throw new RuntimeException(e);
+		} catch (InvocationTargetException e) { // Tratando a InvocationTargetException de forma diferente
+			e.printStackTrace();
+			throw new RuntimeException("Erro no contrutor", e.getTargetException());
 		}
 
 	}
